# personalized-bedtime-story-app

./: .gitignore  CODE_OF_CONDUCT.md  README.md
.github/workflows/: build_test.yml  deploy.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/src/: main.py
backend/src/api/v1/: auth.py  stories.py  users.py
backend/src/core/: config.py  exceptions.py  security.py
backend/src/db/: models.py  session.py
backend/src/db/migrations/: README.md
backend/src/services/: auth_service.py  image_generation_service.py  story_generation_service.py  tts_service.py  user_service.py
backend/src/utils/: helpers.py
backend/tests/api/: README.md
backend/tests/services/: README.md
docs/: api_spec.yaml  architecture.md  deployment.md
frontend/: .env.example  README.md  app.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Header.tsx  StoryTextDisplay.tsx
frontend/src/navigation/: AppNavigator.tsx  index.ts
frontend/src/screens/: AuthScreen.tsx  HomeScreen.tsx  SettingsScreen.tsx  StoryPlayerScreen.tsx
frontend/src/services/: api.ts  auth.ts
frontend/src/store/: authStore.ts  storyStore.ts
frontend/src/theme/: colors.ts  typography.ts
frontend/src/utils/: dateUtils.ts
frontend/tests/components/: README.md
frontend/tests/screens/: README.md
infrastructure/: main.tf  outputs.tf  variables.tf
