[tool.poetry]
name = "personalized-bedtime-story-backend"
version = "0.1.0"
description = "FastAPI backend for personalized bedtime story app"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
SQLAlchemy = "^2.0.21"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.0"
python-dotenv = "^1.0.0"
openai = "^1.3.0"
google-cloud-texttospeech = "^2.15.0"
boto3 = "^1.29.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
